[project]
name = "testxp"
version = "0.1.0"
description = "Test Project"
authors = [
    {name = "Muhammad Syarifudin", email = "muhammad.el.syarifudin@gmail.com"},
]
dependencies = [
    "flask>=3.0.2",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
